--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://your-api.onrender.com/api/$1"
+      "destination": "https://moneyapi-lj06.onrender.com/api/$1"
     },
     {
       "source": "/(.*)",
